syntax = "proto3";

package example.person;

option go_package="personpb";

message Person {
  int32 age = 1;
  string first_name = 2;
  string last_name = 3;
  bytes profile_picture = 4;
  bool isVerfied = 5;
  float height = 6;
}